style: fix tablet mobile menu horizontal alignment by positioning relative to split-hero wrapper and bump version to 1.30

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: Custom WordPress block theme for the Paradis Flooring front page bu
 Requires at least: 6.7
 Tested up to: 7.0
 Requires PHP: 7.2
-Version: 1.29
+Version: 1.30
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: paradis-flooring
@@ -1181,7 +1181,7 @@ li {
 
 @media (max-width: 980px) {
 	.pfc-brand-panel {
-		position: relative;
+		position: static;
 	}
 
 	.pfc-main-nav {
@@ -1193,7 +1193,7 @@ li {
 		position: absolute;
 		top: 0;
 		right: 0;
-		height: 100%;
+		height: 86px;
 		z-index: 12;
 		margin: 0;
 	}
